--- a/templates/active.html
+++ b/templates/active.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>知了课堂-账号啟用</title>
+    <title>帳號啟用</title>
     <link href="{% static 'bootstrap5/bootstrap.min.css' %}" rel="stylesheet">
     <script src="{% static 'jquery/jquery-3.7.1.min.js' %}"></script>
     <style>
@@ -40,17 +40,18 @@
 <body class="mt-5 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
         <form method="POST">
-            <h1 class="h3 mb-3 fw-normal">知了课堂-员工啟用</h1>
+            <h1 class="h3 mb-3 fw-normal">帳號啟用</h1>
             <div class="form-floating">
-                <input name="email" type="email" class="form-control" id="emailInput" placeholder="请输入邮箱">
-                <label for="emailInput">邮箱</label>
+                <input name="email" type="email" class="form-control" id="emailInput" placeholder="請輸入信箱">
+                <label for="emailInput">信箱</label>
             </div>
             <div class="form-floating">
-                <input name="password" type="password" class="form-control" id="passwordInput" placeholder="请输入密码">
-                <label for="passwordInput">密码</label>
+                <input name="password" type="password" class="form-control" id="passwordInput" placeholder="請輸入密碼">
+                <label for="passwordInput">密碼</label>
             </div>
             <button class="btn btn-primary w-100 py-2" type="submit" id="submit-btn">啟用</button>
         </form>
+        <div id="result-message" class="text-center mt-4"></div>
     </main>
 
     <script>
@@ -60,17 +61,18 @@
             let password = $("#passwordInput").val()
             let emailRegex = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
             if(!emailRegex.test(email)){
-                alert("请输入正确格式的邮箱！")
+                alert("請輸入正確的信箱")
                 return;
             }
             if(!password || password.length < 6){
-                alert("请输入最少6位的密码！")
+                alert("密碼最少六位數")
                 return;
             }
-            $.post("/staff/active", {email, password}, function (result){
+            $.post("/api/staff/active", {email, password}, function (result){
                 if(result.code == 200){
                     alert("啟用成功！")
-                    window.location = "/"
+                    {#window.location = "/"#}
+                    $("#result-message").html("<h1 style='color: green;'>啟用帳號成功！</h1>")
                 }else{
                     alert(result.message)
                 }
